Fix for text alignment in chat loader

--- a/static/css/dark-cow/theme.css
+++ b/static/css/dark-cow/theme.css
@@ -382,7 +382,7 @@ hr {
     
     .chatloader .chatloader-view {
         margin: 0 auto;
-        width: 400px;
+        width: 100%;
         text-align:center;
     }
     
